[package]
name = "ha-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
jiff = { version = "0.1.13", features = ["serde"] }
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
reqwest = { version = "0.12.8", default-features = false, features = [
  "rustls-tls-native-roots",
  "json",
] }
uuid = { version = "1.11.0", features = ["serde"] }
eyre = "0.6.12"

[features]
# default = ["xdg-portal"]
# rfd = ["libcosmic/rfd"]
# xdg-portal = ["libcosmic/xdg-portal"]

[dependencies.i18n-embed]
version = "0.15.0"
features = ["fluent-system", "desktop-requester"]

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
default-features = false
features = [
  "dbus-config",
  "tokio",
  "winit",
  "wgpu",
  "wayland",
  "multi-window",
  "single-instance",
  "xdg-portal",
]
